Agentic Scraper Code updates